# Django_TH

django_th/: .env  README.md  pyproject.toml
django_th/src/: grpc_client.py  product_pb2.py  product_pb2_grpc.py
django_th/src/config/: settings.py  urls.py
django_th/src/hoctap_django/: ProductViewSet.py  admin.py  apps.py  models.py  product_serializers.py  urls.py
django_th/src/hoctap_django/migrations/: 0001_initial.py
django_th/src/protos/: product.proto
django_th/src/proxy/: graphql.py  urls.py  views.py
